--- a/res/layout/activity_choose.xml
+++ b/res/layout/activity_choose.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:gravity="center_vertical"
         android:orientation="horizontal" >
 
@@ -54,6 +54,10 @@
                 android:id="@+id/radio22"
                 style="@style/radio_button_text"
                 android:text="Task 3 - 70km" />
+            <RadioButton
+                android:id="@+id/radio33"
+                style="@style/radio_button_text"
+                android:text="Task 4 - 125km, 4TP" />
             </RadioGroup>
     </LinearLayout>
 
