--- a/res/values-w820dp/dimens.xml
+++ b/res/values-w820dp/dimens.xml
@@ -3,15 +3,15 @@
     <!--
          Example customization of dimensions originally defined in res/values/dimens.xml
          (such as screen margins) for screens with more than 820dp of available width. This
-         would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively).
+         would include 7" and 10" devices in landscape (~960dp and ~1280dp respectively).
     -->
     <dimen name="activity_horizontal_margin">64dp</dimen>
     <dimen name="controls_font_size">24dp</dimen>
     <dimen name="start_font_size">30dp</dimen>
+    <dimen name="radio_font_size">24dp</dimen>
+    <dimen name="rb_height">48dp</dimen>
     <dimen name="controls_padding">14dp</dimen>
     <dimen name="controls_width">48dp</dimen>
     <dimen name="info_font_size">16dp</dimen>
-    
-    
 
 </resources>
