--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,7 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
-    
+
     <style name="button_text">
         <item name="android:textSize">@dimen/controls_font_size</item>
         <item name="android:textStyle">bold</item>
@@ -15,9 +15,8 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">@dimen/controls_padding</item>
         <item name="android:background">@drawable/background_button</item>
-        
     </style>
-    
+
     <style name="start_button_text">
         <item name="android:textSize">@dimen/start_font_size</item>
         <item name="android:textStyle">bold</item>
@@ -28,17 +27,16 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">@dimen/controls_padding</item>
         <item name="android:background">@drawable/background_button</item>
-        
     </style>
-    
+
     <style name="radio_button_text">
         <item name="android:textSize">@dimen/start_font_size</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_height">@dimen/rb_height</item>
         <item name="android:gravity">center</item>
-        
-        
+        <item name="android:layout_margin">5dp</item>
     </style>
+
 </resources>
