--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -4,6 +4,7 @@
         Base application theme, dependent on API level. This theme is replaced
         by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
+    <style name="AppTheme" parent="android:Theme.Light.NoTitleBar.Fullscreen"></style>
 
     <style name="button_text">
         <item name="android:textSize">@dimen/controls_font_size</item>
@@ -38,5 +39,19 @@
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">5dp</item>
     </style>
-
+    
+    <style name="PreferenceTheme" parent="android:Theme.Light">
+        <item name="android:listSeparatorTextViewStyle">@style/PreferenceListHeader</item>
+    </style>
+    
+    <style name="PreferenceListHeader">
+        <item name="android:background">@color/light_gray</item>
+        <item name="android:layout_height">30dip</item>
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    
 </resources>
