--- a/res/layout/activity_choose.xml
+++ b/res/layout/activity_choose.xml
@@ -2,22 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
+    android:layout_margin="@dimen/controls_padding"
     tools:context="${relativePackage}.${activityClass}" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height= "match_parent"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" >
 
         <RadioGroup
             android:id="@+id/radioGlider"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
             android:layout_margin="@dimen/controls_padding"
-            android:layout_weight="1" >
+             >
 
             <RadioButton
                 android:id="@+id/radio0"
@@ -36,50 +32,19 @@
                 android:text="Sailplane" />
         </RadioGroup>
 
-        <RadioGroup
-            android:id="@+id/radioTask"
+        <GridView
+            android:id="@+id/gridview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/controls_padding"
-            android:layout_weight="1" >
-
-            <RadioButton
-                android:id="@+id/radio00"
-                style="@style/radio_button_text"
-                android:checked="true"
-                android:text="Task 1 - 50km, 2TP" />
-
-            <RadioButton
-                android:id="@+id/radio11"
-                style="@style/radio_button_text"
-                android:text="Task 2 - 100km" />
-
-            <RadioButton
-                android:id="@+id/radio22"
-                style="@style/radio_button_text"
-                android:text="Task 3 - 70km" />
-
-            <RadioButton
-                android:id="@+id/radio33"
-                style="@style/radio_button_text"
-                android:text="Task 4 - 120km, 4TP" />
-
-            <RadioButton
-                android:id="@+id/radio44"
-                style="@style/radio_button_text"
-                android:text="Task 5 - 150km, 6TP" />
-
-            <RadioButton
-                android:id="@+id/radio55"
-                style="@style/radio_button_text"
-                android:text="Task 6 - free distance" />
-        </RadioGroup>
-
-        <Button
-            android:id="@+id/choose_continue"
-            style="@style/start_button_text"
-            android:layout_weight="1"
-            android:text="Game >>" />
-    </LinearLayout>
+            android:layout_marginTop="5dp"
+            android:columnWidth="60dp"
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:horizontalSpacing="10dp"
+            android:numColumns="2"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="10dp" >
+        </GridView>
+        
 
 </LinearLayout>
