--- a/res/layout/activity_startwifigame.xml
+++ b/res/layout/activity_startwifigame.xml
@@ -15,12 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="left|bottom"
         android:padding="5dp"
-        android:text="-"
-        android:textColor="@color/black" 
-        android:shadowColor="@color/white" 
-        android:shadowRadius="1"
+        android:shadowColor="@color/white"
         android:shadowDx="1"
-        android:shadowDy="1"/>
+        android:shadowDy="1"
+        android:shadowRadius="1"
+        android:text="-"
+        android:textColor="@color/black" />
 
     <FrameLayout
         android:id="@+id/overlay"
@@ -104,38 +104,41 @@
                 android:text="Start race" />
         </LinearLayout>
 
-        <FrameLayout
+        <include layout="@layout/controls" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
+        android:layout_marginBottom="@dimen/controls_padding" >
+
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:background="#000000" />
+
+        <LinearLayout
+            android:layout_width="1dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center"
+            android:background="#000000" />
+
+        <SeekBar
+            android:id="@+id/vario"
+            android:thumb="@drawable/green_dot"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center"
-            android:layout_marginBottom="@dimen/controls_padding" >
-
-            <LinearLayout
-                android:layout_width="100dp"
-                android:layout_height="1dp"
-                android:layout_gravity="center"
-                android:background="#000000" />
-
-            <LinearLayout
-                android:layout_width="1dp"
-                android:layout_height="10dp"
-                android:layout_gravity="center"
-                android:background="#000000" />
-            <SeekBar
-                android:id="@+id/vario"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:clickable="false"
-                android:enabled="false"
-                android:focusable="false"
-                android:indeterminate="false"
-                android:max="100"
-                android:progress="50"
-                android:progressDrawable="@android:color/transparent" />
-        </FrameLayout>
-
-        <include layout="@layout/controls" />
+            android:layout_gravity="center"
+            android:clickable="false"
+            android:enabled="false"
+            android:focusable="false"
+            android:indeterminate="false"
+            android:max="100"
+            android:progress="100"
+            android:padding="5dp"
+            android:progressDrawable="@android:color/transparent" />
     </FrameLayout>
 
 </FrameLayout>
