Online finalized + task 9

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -18,5 +18,5 @@
     <Button
         android:id="@+id/startNetworkOnline"
         style="@style/start_button_text"
-        android:text="Multiplayer (online)" android:visibility="visible"/>
+        android:text="Online Multiplayer (test phase)" android:visibility="visible"/>
 </LinearLayout>
