--- a/res/layout/activity_choose.xml
+++ b/res/layout/activity_choose.xml
@@ -37,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:columnWidth="60dp"
             android:gravity="center"
             android:layout_gravity="center_vertical"
