--- a/res/layout/controls.xml
+++ b/res/layout/controls.xml
@@ -9,15 +9,54 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <TextView
-            android:id="@+id/textView1"
+        <FrameLayout
+            
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@drawable/textviewback"
-            android:gravity="center"
-            android:text="Turn left"
-            android:textSize="26sp" />
+            android:gravity="center" >
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/textviewback"
+                android:gravity="center"
+                android:text="Turn left"
+                android:textSize="26sp" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text=""
+                android:textSize="26sp" />
+
+            <TextView
+                android:id="@+id/textView15"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:text=""
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:text="double tap : show/hide info"
+                android:textSize="20sp" />
+        </LinearLayout>
+         </FrameLayout>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -41,7 +80,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="3"
                 android:gravity="center"
-                android:text="drag here to change view\n1-6 : camera views\n+/- : zoom in/out\np : pause\ndouble tap : hide controls"
+                android:text="drag here to change view\n1-6 : camera views\n+/- : zoom in/out\np : pause\ndouble tap : show/hide controls"
                 android:textSize="16sp" />
 
             <TextView
@@ -65,5 +104,6 @@
             android:text="Turn right"
             android:textSize="26sp" />
     </LinearLayout>
+
 
 </FrameLayout>
