--- a/res/layout/my_grid_item.xml
+++ b/res/layout/my_grid_item.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/title"
-        style="@style/radio_button_text"
+        style="@style/task_title_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
