--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -35,7 +35,17 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">@dimen/rb_height</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">5dp</item>
+    </style>
+    
+    <style name="task_title_text">
+        <item name="android:textSize">@dimen/radio_font_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center</item>
         <item name="android:layout_margin">5dp</item>
     </style>
